--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios", 
+    "ios": "react-native run-ios",
     "ios-se": "react-native run-ios --simulator='iPhone SE (1st generation)'",
     "start": "react-native start",
     "test": "jest",
@@ -30,6 +30,7 @@
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
+    "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-flipper": "^2.0.0",
